# rust-fullstack-starter

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.prod  Dockerfile.simple  LICENSE  README.md  deny.toml  docker-compose.chaos.yaml  docker-compose.prod.yaml  docker-compose.yaml
starter/: .gitignore  Cargo.toml
starter/.sqlx/: query-00819f7e49700e81934dd66761f42e2d1f055a45d7f706916690fbc854a465da.json  query-00a4f70de8b9bbc6bfccf34a058842872c3ed144fe6c3ff06fe2286efd8661d3.json  query-01a1a98b6624169afbe234c32cd869325cb3afb8e53ecee7e5873149cb4e1823.json  query-041843d425573f421ad1e5717c95a4e6ce59e11aea6f3bc4b817e6225c434261.json  query-04e93b16a1e19021ac3bd8c32073112e975a5834d037368b9624c25eeab3a601.json  query-04ed85c00ec08b75e2ceceed35b961d098c0a3ec2697f009a7257630e45dd85d.json  query-0661119222dd916227c63f970cd4c083de934a7420daa64c927a2dee17a2be4f.json  query-08ba07fc7e4ee1b46364fcf46ca0c62be4f727cc721d98164cfc0d392963d8d4.json  query-0934ff3903e5e67ebd7c2120f759089caacbd6b6595bb0e56f65b233d0c71e42.json  query-0a8e678d34a6ee5ee01126b59e7f3afe68e83e75c58cc12cdf88469251c3900e.json  query-0bc7580a4003e6b0197e941e6ec35d8d00be76fddb8c525dac2b866575f405f2.json  query-10e702a1e7999d65d96d1bcf51a1b0ede87d9862bdc3ec7fb13a83973dab2442.json  query-1261088c598c65afef4fc64227faae2e24d90396e8be5f6e899881e90306981f.json  query-12fa9f61ff8a0cc86bbeb3208de3cb549e9937332f7434a39a10697c3cab6049.json  query-1383ac5a75ca3fbd7bf833565112fbacb2b13489d0593ef94fcf29bb8cce1cf7.json  query-1472abff0bf6c800d3961abd624e952d4538020b5077acd076927acb48069a6b.json  query-16128effaff207916ba3bbdc125b0c5189c14bb44bb5145ec72f55c504e47742.json  query-16cb1f7f90851fcd9f0608d9ca31c8155bb34d00bc1795d711ab3e24835720ec.json  query-1786b0fcd2e6c0b193f679e75fec745864e46d56fd9657968c4b968d72aa5ec1.json  query-19a584f67ae1dd2c11980f62af02875624603558d3c225cecf0f4c300e7eee06.json  query-1d8411ee434993e39b40a365cd7384f8abc0aec9533a404157a436c4ca68512c.json  query-1eda3645977f6487343eccef4c9338307690028c1012bfc5b61d7ee79bc719ef.json  query-1f2023c41088aa9abb17361117d7e41d8632404cefce7a50543719f9e732e03a.json  query-1f7d47a569d6b6b7e51c6245448f48c0fde213d458fef731fea60b2a0590d291.json  query-1fa7c54ec880290d50eb46ff2e061cbb4e4757e9139b4ba88fcfb017ed7e88c5.json  query-200048eddde296963458cf0bbd5454d9da05aaa8d29b3e5e81ffb61f6930d42e.json  query-212b95039aa00800ddddf4387af93a7ae80bf15ef80bee4fb47efa84c8365e44.json  query-234d15ef25df5cc5be17ad049464b646f07220483ca8af0f039b787d1d8de223.json  query-23801e27520ee65c24053b8727c4dfa51536b3b488eae78451f400f64aed12cc.json  query-2bf3c43026c95a0ea9aea96e28ab69ac8b3061e27601b79de7ec23bdfd7d1596.json  query-2f18d8fa0cc2e3689a6de2f9d2ee01e5ab4fd3bf995f2fe631a7f632d4af9160.json  query-3013ada4835021cc31d5750432a80a952cb1a0d820153139226715a5802962cb.json  query-303d41c181fae2b5f07baf2a8759b94ad965ebfc105b7285da69ae68891fe1bb.json  query-307dc848770c0cda07df41e94fc3c2d11f1518ee1e2ccebba85ba7d19e48e861.json  query-32f58ff53248455da1263560cf40a7dfa2a4f48f72c88012c51de5a94f871cfe.json  query-34fe8e9ecb68f9d6ae0281a6cfb5f082ace2337905feb96b7588305476bafa09.json  query-362ecb4cdb71cc79e68623535bb64d8f471fef7295b70577317e6836e7770522.json  query-36a1edf93ccb7e06cd8bbf26dbe8d1e4fb8057d01d6e449c959f8d6258abbac8.json  query-381e82ff5977c41fe1207e5cef6eec838762523abc8e52def1c3fc40186a44f6.json  query-3965ade75b9072abca38a84847a1fa9db1490aac8cf3075292970d50c9e3950c.json  (+83 more)
starter/docs/: openapi.json
starter/migrations/: 001_initial.sql  001_users.down.sql  001_users.up.sql  002_sessions.down.sql  002_sessions.up.sql  003_api_keys.down.sql  003_api_keys.up.sql  004_tasks.down.sql  004_tasks.up.sql  005_task_types.down.sql  005_task_types.up.sql  006_add_session_refresh_tracking.down.sql  006_add_session_refresh_tracking.up.sql  006_monitoring.down.sql  006_monitoring.up.sql  007_basics.down.sql  007_basics.up.sql  007_books.down.sql  007_books.up.sql  007_products.down.sql  007_products.up.sql  007_role_constraints.down.sql  007_role_constraints.up.sql  008_inventorys.down.sql  008_inventorys.up.sql
starter/scripts/: test_tasks_api.sh  test_worker.sh
starter/src/: config.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  openapi.rs  server.rs  types.rs
starter/src/api/: health.rs  mod.rs  pagination.rs  response.rs  types.rs
starter/src/auth/: api.rs  cleanup.rs  middleware.rs  mod.rs  models.rs  services.rs  tests.rs
starter/src/basics/: api.rs  models.rs  services.rs
starter/src/cli/: api.rs  mod.rs  models.rs  services.rs  tests.rs
starter/src/core/: config.rs  database.rs  mod.rs  openapi.rs  server.rs  state.rs  types.rs
starter/src/health/: checks.rs  handlers.rs  mod.rs  types.rs
starter/src/monitoring/: api.rs  handlers.rs  mod.rs  models.rs  services.rs
starter/src/products/: api.rs  mod.rs  models.rs  services.rs
starter/src/rbac/: middleware.rs  mod.rs  models.rs  (+1 more)
starter/tests/: README.md  lib.rs
(+343 files in other folders)
