[workspace]
resolver = "2"
members = ["starter"]

[workspace.dependencies]
# Web framework
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "fs"] }
tower = "0.5.2" 
tower-http = { version = "0.6.6", features = ["trace", "timeout", "compression-br", "cors", "fs", "metrics", "set-header"] }

# Database
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "migrate", "json", "uuid"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

# Error handling
thiserror = "2.0.12"

# Authentication & Security
argon2 = "0.5.3"
password-hash = "0.5.0"
rand = "0.9.2"

# Async traits
async-trait = "0.1.82"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Time & UUID
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4", "v7"] }

# Configuration
config = "0.15.13"
dotenvy = "0.15.7"
secrecy = { version = "0.10.3", features = ["serde"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter", "json"] }

# Development & Testing
tempfile = "3.20.0"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio-test = "0.4"
once_cell = "1.20"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
