[workspace]
resolver = "2"
members = ["starter"]

[workspace.package]
license = "MIT"

[workspace.dependencies]

# Authentication & Security
argon2 = "0.5.3"

# Async traits
async-trait = "0.1.82"
# Web framework
axum = "0.8.4"

# Base64 encoding
base64 = "0.22.1"

# Time & UUID
chrono = { version = "0.4.41", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
config = "0.15.13"
dotenvy = "0.15.7"
once_cell = "1.20"
password-hash = "0.5.0"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
secrecy = { version = "0.10.3", features = ["serde"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "migrate", "json", "uuid", "macros"] }

# Development & Testing
tempfile = "3.20.0"

# Error handling
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "fs"] }
tokio-test = "0.4"
tower = "0.5.2" 
tower-http = { version = "0.6.6", features = ["trace", "timeout", "compression-br", "cors", "fs", "metrics", "set-header"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter", "json"] }

# OpenAPI Documentation
utoipa = { version = "5.0.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0.0", features = ["axum"] }
uuid = { version = "1.17.0", features = ["serde", "v4", "v7"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
