[package]
name = "starter"  # Rename this to your project name
version = "0.1.0"
edition = "2024"

[dependencies]
# Inherit from workspace
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
argon2.workspace = true
password-hash.workspace = true
rand.workspace = true
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
config.workspace = true
dotenvy.workspace = true
secrecy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true
tokio-test.workspace = true
once_cell.workspace = true
