[package]
name = "starter"  # Rename this to your project name
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
# Inherit from workspace
axum.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
dotenvy.workspace = true
password-hash.workspace = true
rand.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[dev-dependencies]
once_cell.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
